# Geometry

./: .gitignore  CMakeLists.txt  CMakeSettings.json
core/: CMakeLists.txt  SkFloatPoint.cpp  SkFloatPoint.h  SkFloatPointArray.h  SkFloatVector.cpp  SkFloatVector.h  SkFloatVectorArray.h  SkSurfaceMesh.cpp  skMicro.h  skSurfaceMesh.h
test/: CMakeLists.txt  skFPntOperTest.h  testMain.cpp
